--- a/src/app/Component/Creation/creation-question/creation-question-defaut/creation-question-defaut.component.scss
+++ b/src/app/Component/Creation/creation-question/creation-question-defaut/creation-question-defaut.component.scss
@@ -1,28 +1,76 @@
 .body {
   width: 100%;
   height: auto;
-  display: grid;
-  grid-template-columns: 60% 30%;
-  grid-template-rows: repeat(4, 8vh);
-  grid-column-gap: 10%;
-  mat-form-field{
-    width: 100%;
-  }
+  display: flex;
+  justify-content: space-around;
 }
 
-.div1 { grid-area: 1 / 2;}
-.div2 { grid-area: 1 / 1;}
-.div3 { grid-area: 2 / 2;}
-.div4 { grid-area: 2 / 1;}
+.divLeft {
+  width: 50%;
+}
+.divRight{
+  width: 30%
+}
+.reponses{
+  display: flex;
+}
+.reponse{
+  width: 100%;
+  height: 75px;
+  display: flex;
+  justify-content: space-between;
 
-#good{
-  color: white;
-  -webkit-user-select: none;
-  user-select: none;
-  background-color: #3F51B5;
+}
+img{
+  width: 19px;
+  height: 19px;
+}
+.delete:hover{
+  margin-top: 4px;
+}
+.delete{
+  background-color: darkred;
+  width: 10px;
+  height: 10px;
+  margin-top: 2px;
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 1.5rem;
+}
+.form-reponse{
+  width: 90%;
+  display: flex;
+  flex-direction: column;
+
+}
+.not-selectable{
+  pointer-events: none;
+}
+.mat1{
+  width: 100%;
+}
+.mat{
+  width: 100%;
+}
+::ng-deep.selected{
+  .mat-form-field-label {
+    color: #7CE73B;
+    font-weight: bold;
+  }
+}
+.good{
+  color: white;
+  -webkit-user-select: none;
+  user-select: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 1.4rem;
   cursor: pointer;
+}
+.goodClick{
+  background-color: #3F51B5;
+}
+.goodIdle{
+  background-color: #7384E2;
 }
