--- a/src/app/Pages/accueil/accueil.component.html
+++ b/src/app/Pages/accueil/accueil.component.html
@@ -1,8 +1,7 @@
 <div class="wrapper">
   <div class="recent">
-    <span>
-      RECENTS:
-    </span>
+    <h1>Recents <i class="fa-solid fa-clock-rotate-left"></i></h1><br>
+    <app-recents></app-recents>
   </div>
   <div class="qcm">
     <app-create [image]="'assets/img/3.svg'" [titre]="'CREER UN QCM'" [type]="'creer'" class="creer curseur"></app-create>
