--- a/src/app/Pages/accueil/accueil.component.scss
+++ b/src/app/Pages/accueil/accueil.component.scss
@@ -1,30 +1,3 @@
-//.wrapper{
-//  margin-top: 5%;
-//  width: 100%;
-//  display:flex;
-//  justify-content: space-evenly;
-//}
-//@media(max-width: 70rem){
-//  .wrapper{
-//  flex-direction: column;
-//    align-items: center;
-//  }
-//  .modifier{
-//    margin-top: 2em;
-//  }
-//}
-//.creer{
-//  flex:1;
-//  cursor:pointer;
-//  max-width:33rem;
-//}
-//
-//.modifier{
-//  flex:2;
-//  cursor:pointer;
-//  max-width:33rem;
-//}
-
 .wrapper{
   width: 100%;
   display: flex;
@@ -34,7 +7,6 @@
 
 .recent{
   width: 50%;
-  background-color: red;
 }
 
 .creer{
@@ -54,4 +26,8 @@ span{
   color: #3F51B5;
   font-weight: bold;
   font-size: 2em;
+}
+
+i, h1{
+  color: #3F51B5;
 }
