--- a/src/app/Component/Creation/creation-parametres/creation-parametres.component.html
+++ b/src/app/Component/Creation/creation-parametres/creation-parametres.component.html
@@ -8,8 +8,8 @@
   <div class="center">
     <mat-form-field appearance="fill">
       <mat-label>Mélanger</mat-label>
-      <mat-select [(value)]="selected" (selectionChange)="melangeChange()">
-        <mat-option *ngFor="let choi of choix" [value]="choi.value">
+      <mat-select [(value)]="selected">
+        <mat-option *ngFor="let choi of choix" [value]="choi.value" (click)="setChange()">
           {{choi.viewValue}}
         </mat-option>
       </mat-select>
@@ -25,13 +25,18 @@
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
       <ng-container matColumnDef="nom">
-        <th mat-header-cell *matHeaderCellDef> Nom </th>
-        <td mat-cell *matCellDef="let element"> {{element.nom}} </td>
+        <th mat-header-cell *matHeaderCellDef> Nom de la catégorie </th>
+        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
       </ng-container>
 
       <ng-container matColumnDef="nombre">
-        <th mat-header-cell *matHeaderCellDef>Nombre</th>
-        <td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
+        <th mat-header-cell *matHeaderCellDef>Nombre de question sélectionné</th>
+        <td mat-cell *matCellDef="let element"> {{element.questions.length}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="total">
+        <th mat-header-cell *matHeaderCellDef>Nombre de question total de la catégorie</th>
+        <td mat-cell *matCellDef="let element"> {{element.questions.length}} </td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
