fix du tableau parametre et ajout du panel edition

--- a/src/app/Component/Creation/creation-editions/creation-editions.component.scss
+++ b/src/app/Component/Creation/creation-editions/creation-editions.component.scss
@@ -1,4 +1,21 @@
-body{
+.wrapper-bouton{
+  display: flex;
+  flex-direction: row;
   margin-top: 1rem;
-  text-align: center;
+  justify-content: space-around;
+}
+.bouton{
+  width: 20%;
+}
+.wrapper-main{
+  display: flex;
+  flex-direction: column;
+  margin-top: 1rem;
+  justify-content: center;
+  align-items: center;
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+img{
+  height: 17rem;
 }
