Petit refactoring des services et création de nouvelles méthodes dans le service de gestion des utilisateurs

--- a/src/app/Component/gestion-users/edit-user/edit-user-action/edit-user-action.component.html
+++ b/src/app/Component/gestion-users/edit-user/edit-user-action/edit-user-action.component.html
@@ -1,3 +1,5 @@
+<div class="alert alert-warning" *ngIf='error'>{{errorMessage}}</div>
+
 <select [ngModel]="selectedField" (ngModelChange)="onChange($event)" name="deviceText">
   <option [value]="i" *ngFor="let i of fields">{{i}}</option>
 </select>
@@ -7,3 +9,8 @@
   <input *ngIf="selectedField == 'Prénom'" type="text" name="{{user.prenom}}" [(ngModel)]="user.nom">
   <input *ngIf="selectedField == 'Nom'" type="text" name="{{user.nom}}" [(ngModel)]="user.prenom">
 </form>
+
+<button (click)="editUser()"></button>
+
+
+<div  *ngIf='resultMessage != ""'>{{resultMessage}}</div>
