--- a/src/app/Component/gestion-users/gestion-users.component.html
+++ b/src/app/Component/gestion-users/gestion-users.component.html
@@ -1,13 +1,15 @@
-<div class="wrapper-bouton">
-<!--  <app-bouton name="Nouvel utilisateur" (click)=newUser() href="new"></app-bouton>-->
-<!--  <br>-->
-<!--  <app-bouton name="Modifier un utilisateur" (click)=editUser()></app-bouton>-->
-<!--  <br>-->
-<!--  <app-bouton name="Supprimer un utilisateur" (click)=removeUser()></app-bouton>-->
-<!--  <br>-->
-<!--  <app-bouton name="Réinitialiser un mot de passe" (click)=resetUser()></app-bouton>-->
-<!--  <br>-->
-  <app-edit-user></app-edit-user>
-  <app-new-user></app-new-user>
+<body>
+<div class="contain">
+  <!--  <app-bouton name="Nouvel utilisateur" (click)=newUser() href="new"></app-bouton>-->
+  <!--  <br>-->
+  <!--  <app-bouton name="Modifier un utilisateur" (click)=editUser()></app-bouton>-->
+  <!--  <br>-->
+  <!--  <app-bouton name="Supprimer un utilisateur" (click)=removeUser()></app-bouton>-->
+  <!--  <br>-->
+  <!--  <app-bouton name="Réinitialiser un mot de passe" (click)=resetUser()></app-bouton>-->
+  <!--  <br>-->
+  <app-edit-user id="edit"></app-edit-user>
+  <app-new-user id="new"></app-new-user>
 </div>
 <router-outlet></router-outlet>
+</body>
