--- a/src/app/Component/gestion-users/gestion-users.component.scss
+++ b/src/app/Component/gestion-users/gestion-users.component.scss
@@ -1,11 +1,20 @@
-.bouton{
-  width: 20%;
-}
-.wrapper-bouton{
+.contain{
   display: flex;
-  flex-direction: row;
-  margin-top: 1rem;
-  justify-content: center;
-  letter-spacing: 1px;
-  gap:10px
+  justify-content: space-around;
+  width: 100%;
+  height: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 5%;
+}
+body{
+  height: 80%;
+}
+
+#edit{
+  width: 40%;
+}
+
+#new{
+  width: 40%;
 }
