Mise en fonction du bouton + du tableau de QCM

--- a/src/app/Component/tableau/tableau.component.html
+++ b/src/app/Component/tableau/tableau.component.html
@@ -30,5 +30,5 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     <tr mat-footer-row>Hey</tr>
   </table>
-  <button type="button" class="add"><mat-icon> add </mat-icon></button>
+  <button type="button" class="add" (click)="openDialog()"><mat-icon> add </mat-icon></button>
 </mat-card>
