Mise à jour du panel d'éditions impliquant le déplacement des méthodes de suppression et de réinitialisation des mots de passe. Reste à faire la modification utilisateur.

--- a/src/app/Component/gestion-users/edit-user/edit-user.component.html
+++ b/src/app/Component/gestion-users/edit-user/edit-user.component.html
@@ -14,7 +14,8 @@
     <app-bouton name="Réinitialiser le mot de passe" (click)="open_dialogue_resiliation()"></app-bouton>
   </div>
 </form>
-
+<p *ngIf="error == true">{{errorMessage}}</p>
+<p *ngIf="message != ''">{{message}}</p>
 <router-outlet></router-outlet>
 </body>
 
