--- a/src/app/Component/Layout/topbar/topbar.component.scss
+++ b/src/app/Component/Layout/topbar/topbar.component.scss
@@ -27,11 +27,49 @@ li a{
   text-decoration: none;
   color: var(--primary);
 }
-#user{
-  color: #3F51B5;
-}
 
 mat-icon{
   color: #3F51B5;
 }
 
+.dropbtn
+{
+  color: #FFFFFF;
+  background-color: #3F51B5;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+.dropbtn:hover, .dropbtn:focus {
+  background-color: #2980B9;
+}
+
+.dropdown {
+  margin-left:10px;
+  position: relative;
+  display: inline-block;
+}
+
+.contenu-dropdown {
+  position: absolute;
+  background-color: #f1f1f1;
+  //min-width: 160px;
+  overflow: auto;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.contenu-dropdown a {
+  color: white;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  cursor: pointer;
+}
+
+#logout-item{
+  background-color: rgb(182, 50, 50);
+
+}
