Création panel profil

--- a/src/app/Component/Creation/creation-question/creation-question-numerique/creation-question-numerique.component.html
+++ b/src/app/Component/Creation/creation-question/creation-question-numerique/creation-question-numerique.component.html
@@ -1,12 +1,12 @@
 <div class="body">
   <div class="div1">
-    <mat-form-field appearance="fill" id="notation">
+    <mat-form-field appearance="outline" id="notation">
       <mat-label>Réponse</mat-label>
       <input id="reponse" #reponse matInput (keyup)="modifyReponse(reponse.value)" (keyup.backspace)="deleteReponse()" value="{{reponseNum}}" type="number">
     </mat-form-field>
   </div>
   <div class="div2">
-    <mat-form-field appearance="fill">
+    <mat-form-field appearance="outline">
       <mat-label>Notation</mat-label>
       <input id="nota" matInput #notation (keyup)="modifyNotation(notation.value)" (keyup.backspace)="deleteNotation()" value="{{notationNum}}" type="number">
     </mat-form-field>
