--- a/src/app/Component/tableau-etudiants/profil/profil.component.scss
+++ b/src/app/Component/tableau-etudiants/profil/profil.component.scss
@@ -14,12 +14,14 @@ i{
 img{
   width: 25%;
 }
+
 .information{
   position: relative;
   width: 40%;
   height: fit-content;
-  padding: 10px;
+  padding: 2%;
   background-color: #FFFFFF;
+  border-radius: 10px;
 }
 
 mat-form-field{
@@ -79,10 +81,11 @@ input{
 }
 
 .qcm{
-  padding: 10px;
+  padding: 2%;
   width: 40%;
   height: 40%;
   background-color: #FFFFFF;
+  border-radius: 10px;
 }
 
 .qcm h2{
