--- a/src/app/Component/tableau/tableau.component.html
+++ b/src/app/Component/tableau/tableau.component.html
@@ -15,7 +15,7 @@
 
     <!-- Modify Column -->
     <ng-container matColumnDef="modify">
-      <th mat-header-cell *matHeaderCellDef> Modify </th>
+      <th mat-header-cell *matHeaderCellDef> Modifier </th>
       <td mat-cell *matCellDef="let qcm"><button mat-raised-button color="primary" class="mat-button" type="button">Modifier</button></td>
     </ng-container>
 
@@ -23,6 +23,12 @@
     <ng-container matColumnDef="mark">
       <th mat-header-cell *matHeaderCellDef> Notes </th>
       <td mat-cell *matCellDef="let qcm"><button mat-raised-button color="primary" class="mat-button" type="button">Notes</button></td>
+    </ng-container>
+
+    <!-- Correction Column -->
+    <ng-container matColumnDef="correction">
+      <th mat-header-cell *matHeaderCellDef> Correction </th>
+      <td mat-cell *matCellDef="let qcm"><button mat-raised-button color="primary" class="mat-button" type="button" (click)="onCorrection(qcm)">Correction</button></td>
     </ng-container>
 
 
