--- a/src/app/Component/tableau-etudiants/profil/profil.component.html
+++ b/src/app/Component/tableau-etudiants/profil/profil.component.html
@@ -15,7 +15,7 @@
       </div>
       <div class="meslabel">
         <label for="num">N° Etudiant :</label>
-        <p id="num">{{etudiant.numero}}</p>
+        <p id="num">{{etudiant.nOEtudiant}}</p>
       </div>
       <div class="classe">
         <div class="meslabel">
@@ -24,7 +24,7 @@
         </div>
         <div class="meslabel">
           <label for="grp">Groupe :</label>
-          <p id="grp">{{etudiant.group}}</p>
+          <p id="grp">{{etudiant.groupe}}</p>
         </div>
       </div>
     </div>
@@ -41,7 +41,7 @@
       </mat-form-field>
       <mat-form-field>
           <mat-label for="num">N° Etudiant :</mat-label>
-          <input matInput class="num" value="{{etudiant.numero}}" [(ngModel)]="numero"/>
+          <input matInput class="num" value="{{etudiant.nOEtudiant}}" [(ngModel)]="numero"/>
       </mat-form-field>
           <mat-form-field>
             <mat-label for="classe">Classe :</mat-label>
@@ -49,7 +49,7 @@
             </mat-form-field>
           <mat-form-field>
             <mat-label for="grp">Groupe :</mat-label>
-            <input matInput class="grp" value="{{etudiant.group}}" [(ngModel)]="group"/>
+            <input matInput class="grp" value="{{etudiant.groupe}}" [(ngModel)]="group"/>
           </mat-form-field>
     </div>
   </div>
