correction - get qcm et loader

--- a/src/app/Component/correction/correction.component.scss
+++ b/src/app/Component/correction/correction.component.scss
@@ -46,6 +46,12 @@
     text-align: center;
 }
 
+.spinner
+{
+    display:flex;
+    justify-content: center;
+}
+
 mat-list
 {
     max-height: 20rem;
