--- a/src/app/Component/correction/correction.component.html
+++ b/src/app/Component/correction/correction.component.html
@@ -1,8 +1,9 @@
-<div class="content">    
+<div class="content" *ngIf="qcm; else pasqcm">    
     <mat-card class="card">    
         <div style="text-align: center;">
                 <mat-card-title >
-                    Correction du QCM {{qcmId}}
+                    Correction de {{qcm.titre}} <br><br>
+                    <p>Déposez ici les copies d'étudiants à corriger</p>
                 </mat-card-title>
         </div>
         <br>
@@ -42,3 +43,9 @@
         </div>
     </mat-card>
 </div>
+
+<ng-template #pasqcm>
+    <div class="spinner">
+        <mat-spinner></mat-spinner>
+    </div>
+</ng-template>
