modification de qcm fonctionnel, refacto du squelette de l'appli

--- a/src/app/Component/Creation/creation-card/creation-card.component.html
+++ b/src/app/Component/Creation/creation-card/creation-card.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-  <mat-card-title id="{{title}}" [ngClass]="selector===title ? 'selected' : 'unselected'">
+  <mat-card-title id="{{title}}" [ngClass]="isSelected ? 'selected' : 'unselected'">
     {{title}}
   </mat-card-title>
 </mat-card>
