--- a/src/app/Component/Creation/creation-parametres/creation-parametres.component.html
+++ b/src/app/Component/Creation/creation-parametres/creation-parametres.component.html
@@ -26,7 +26,7 @@
 
       <ng-container matColumnDef="nom">
         <th mat-header-cell *matHeaderCellDef> Nom de la catégorie </th>
-        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.nom}} </td>
       </ng-container>
 
       <ng-container matColumnDef="nombre">
