--- a/src/app/Component/Creation/creation-question/creation-question.component.html
+++ b/src/app/Component/Creation/creation-question/creation-question.component.html
@@ -1,13 +1,11 @@
 <mat-card>
   <div class="div1">
-    <mat-card-title class="curseur name" (click)="modifyName()">
-          {{question.name}}
-    </mat-card-title>
+
   </div>
   <div class="div2">
     <mat-form-field appearance="outline" id="question">
           <mat-label>Question?</mat-label>
-          <input #questionSt matInput (keyup)="modifyQuestion(questionSt.value)" placeholder="ma question?" value="{{question.val}}">
+          <input #questionSt matInput (keyup)="modifyQuestion(questionSt.value)" placeholder="ma question?" value="{{question.intitule}}">
     </mat-form-field>
   </div>
   <div class="div3">
