--- a/src/app/Component/tableau/tableau.component.html
+++ b/src/app/Component/tableau/tableau.component.html
@@ -16,7 +16,7 @@
     <!-- Modify Column -->
     <ng-container matColumnDef="modify">
       <th mat-header-cell *matHeaderCellDef> Modifier </th>
-      <td mat-cell *matCellDef="let qcm"><button mat-raised-button color="primary" class="mat-button" type="button">Modifier</button></td>
+      <td mat-cell *matCellDef="let qcm"><button mat-raised-button (click)="modifierQcm(qcm)" color="primary" class="mat-button" type="button">Modifier</button></td>
     </ng-container>
 
     <!-- Mark Column -->
