onglet notes - affichage et dl des résultats

--- a/src/app/Component/correction/correction.component.scss
+++ b/src/app/Component/correction/correction.component.scss
@@ -52,6 +52,12 @@
     justify-content: center;
 }
 
+.center
+{
+    display: flex;
+    justify-content: center;
+}
+
 mat-list
 {
     max-height: 20rem;
