--- a/src/app/Component/tableau/tableau.component.html
+++ b/src/app/Component/tableau/tableau.component.html
@@ -22,7 +22,7 @@
     <!-- Mark Column -->
     <ng-container matColumnDef="mark">
       <th mat-header-cell *matHeaderCellDef> Notes </th>
-      <td mat-cell *matCellDef="let qcm"><button mat-raised-button color="primary" class="mat-button" type="button">Notes</button></td>
+      <td mat-cell *matCellDef="let qcm"><button mat-raised-button color="primary" class="mat-button" type="button" (click)="onNotes(qcm)">Notes</button></td>
     </ng-container>
 
     <!-- Correction Column -->
