--- a/src/app/Component/tableau-etudiants/dialog-create/dialog-create.component.html
+++ b/src/app/Component/tableau-etudiants/dialog-create/dialog-create.component.html
@@ -22,6 +22,6 @@
 <div id="buttons">
   <div mat-dialog-actions>
     <button id="annuler" mat-button mat-dialog-actions mat-dialog-close="">Annuler</button>
-    <button id="valider" mat-button mat-dialog-actions (click)="creer()">Créer</button>
+    <button id="valider" mat-button mat-dialog-actions><!--(click)=" "-->Créer</button>
   </div>
 </div>
