--- a/src/app/Component/correction/correction.component.html
+++ b/src/app/Component/correction/correction.component.html
@@ -1,5 +1,5 @@
-<div class="content" *ngIf="qcm; else pasqcm">    
-    <mat-card class="card">    
+<div class="content" *ngIf="qcm; else pasqcm">
+    <mat-card class="card">
         <div style="text-align: center;">
                 <mat-card-title >
                     Correction de {{qcm.titre}} <br><br>
@@ -12,7 +12,7 @@
 
         <mat-list *ngIf="files.length > 0">
             <mat-list-item *ngFor="let file of files; let i=index;">
-            
+
                 <mat-icon (click)="onDeleteFile(i)" style="cursor: pointer;">delete</mat-icon>
                 <h3 matLine>
                     <mat-icon style="transform: scale(0.9);">picture_as_pdf</mat-icon>
@@ -27,14 +27,19 @@
             <hr>
             <b>{{files.length}}</b> fichiers reçu{{files.length > 1 ? 's' : ''}}
         </h3>
-        
-        <h3 *ngIf="showOnlyPDFAcceptedError" class="errors" style="text-align: center;">Seuls les fichiers .PDF sont acceptés</h3>
+
+        <h3 *ngIf="worked">
+          <hr *ngIf="uploaded">
+          <b>{{files.length}}</b> fichiers uploadés.
+        </h3>
+
+      <h3 *ngIf="showOnlyPDFAcceptedError" class="errors" style="text-align: center;">Seuls les fichiers .PDF sont acceptés</h3>
         <div *ngIf="files.length === 0" class="dropzone" appDragAndDrop (fileDropped)="onFileDropped($event)">
             <input type="file" #fileDropRef id="fileDropRef" multiple (change)="fileBrowseHandler($event)"/>
             <mat-icon>cloud_upload</mat-icon>
             <h3>Déposez les fichiers PDF</h3>
             <h3> ou </h3>
-            <label for="fileDropRef"> Importez les depuis votre ordinateur</label>            
+            <label for="fileDropRef"> Importez les depuis votre ordinateur</label>
         </div>
         <div *ngIf="files.length > 0" class="button-zone">
             <input type="file" id="secondInputFile" multiple (change)="fileBrowseHandler($event)"/>
