--- a/src/app/Component/tableau-etudiants/profil/profil.component.html
+++ b/src/app/Component/tableau-etudiants/profil/profil.component.html
@@ -15,7 +15,7 @@
       </div>
       <div class="meslabel">
         <label for="num">N° Etudiant :</label>
-        <p id="num">{{etudiant.nOEtudiant}}</p>
+        <p id="num">{{etudiant.noetudiant}}</p>
       </div>
       <div class="classe">
         <div class="meslabel">
@@ -41,7 +41,7 @@
       </mat-form-field>
       <mat-form-field>
           <mat-label for="num">N° Etudiant :</mat-label>
-          <input matInput class="num" value="{{etudiant.nOEtudiant}}" [(ngModel)]="numero"/>
+          <input matInput class="num" value="{{etudiant.noetudiant}}" [(ngModel)]="numero"/>
       </mat-form-field>
           <mat-form-field>
             <mat-label for="classe">Classe :</mat-label>
