--- a/src/app/Component/classegroupes/classegroupes.component.html
+++ b/src/app/Component/classegroupes/classegroupes.component.html
@@ -22,7 +22,7 @@
     <!-- Group Column -->
     <ng-container matColumnDef="groupes">
       <th mat-header-cell *matHeaderCellDef> Récupérer la classe </th>
-      <td mat-cell *matCellDef="let classe"><button mat-raised-button color="primary" class="mat-button" type="button" (click)="ownClasse()">Rejoindre</button></td>
+      <td mat-cell *matCellDef="let classe"><button mat-raised-button color="primary" class="mat-button" type="button" (click)="ownClasse(classe)">Ajouter à mes classes</button></td>
     </ng-container>
 
     <!-- Profil Column -->
@@ -60,7 +60,7 @@
 
     <ng-container matColumnDef="join">
       <th mat-header-cell *matHeaderCellDef> Récupérer le groupe </th>
-      <td mat-cell *matCellDef="let groupe"><button mat-raised-button color="primary" class="mat-button" type="button" (click)="ownGroup()">Rejoindre</button></td>
+      <td mat-cell *matCellDef="let groupe"><button mat-raised-button color="primary" class="mat-button" type="button" (click)="ownGroup(groupe)">Ajouter à mes groupes</button></td>
     </ng-container>
 
 
