--- a/src/app/Component/tableau-etudiants/tableau-etudiants.component.html
+++ b/src/app/Component/tableau-etudiants/tableau-etudiants.component.html
@@ -48,3 +48,11 @@
   </table>
   <button type="button" class="add" (click)="openDialog()"><mat-icon> add </mat-icon></button>
 </mat-card>
+<br>
+<div class="Block">
+  <form>
+      <input type='file' accept=".csv" (change)="fileChanged($event)">
+      <button type="button" class="add" (click)="onCSVSubmit()">Ajouter</button>
+  </form>
+  <h3 *ngIf="added > -1"><b>{{added}}</b> étudiants importés</h3>
+</div>
