--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,4 +23,10 @@ body {
 .curseur{
   cursor: pointer;
 }
+.errorMessage{
+  background-color: var(--error);
+}
+.successMessage{
+  background-color: var(--good);
+}
 
