--- a/src/app/Component/Creation/creation-editions/creation-editions.component.html
+++ b/src/app/Component/Creation/creation-editions/creation-editions.component.html
@@ -2,7 +2,7 @@
 <iframe [src]="pdf" title="testPdf" height="400rem" width="800rem"></iframe>
 -->
 <div class="wrapper-bouton">
-  <app-bouton class="bouton curseur" name="Générer le QCM"></app-bouton>
+  <app-bouton class="bouton curseur" name="Générer le QCM" (click)="generateQCM()"></app-bouton>
   <app-bouton *ngIf="isGenerate" class="bouton curseur" name="Télécharger"></app-bouton>
 </div>
 <div *ngIf="!isGenerate"class="wrapper-main">
